[package]
name = "rust_kill"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.40"
clap = { version = "4.5.37", features = ["derive"] }
color-eyre = "0.6.5"
comfy-table = "7.1.4"
crossterm = "0.28.1"
indicatif = "0.17.11"
jwalk = "0.8.1"
log = "0.4.29"
log4rs = "1.4.0"
nu-ansi-term = "0.50.3"
num_cpus = "1.17.0"
ratatui = "0.30.0"
rayon = "1.10.0"
winapi = { version = "0.3.9", features = [
    "processthreadsapi",
    "securitybaseapi",
    "shellapi",
] }

